# pulse-java

./: .gitignore  CONTRIBUTING.md  README.md  pom.xml
.github/workflows/: release.yaml
examples/: AiEnrichmentPipeline.java  CardFraudVelocityGuard.java  EventsLiveAndReplay.java  InteractiveQuery.java  README.md  RealtimeWindowedAggregation.java  StreamToConnector.java  Usecase1ConnectAndList.java  Usecase2DeployVelocityPipeline.java  Usecase3InteractiveQuery.java  Usecase4EventsAndReplay.java  Usecase5SynchronousDecision.java
examples/cobol-mainframe-modernization/: FeedAndRead.java  Main.java  NativeFeeder.java  README.md
examples/cobol-mainframe-modernization/samples/: legacy-cobol.txt
examples/cobol-mainframe-modernization/wasm-cobol-parser/: Cargo.toml  cobol-copybook-parser.wasm
examples/cobol-mainframe-modernization/wasm-cobol-parser/src/: lib.rs
examples/kafka-inline-ai-stack/: Deployer.java  README.md  demo.sh  docker-compose.mesh.yml  docker-compose.yml  pulse-config.yaml
examples/kafka-inline-ai-stack/config/: streamflow.properties
examples/kafka-inline-ai-stack/deployer/: Dockerfile  pom.xml
examples/kafka-inline-ai-stack/model/: fraud-risk.onnx  gen_model.py
examples/kafka-inline-ai-stack/wasm-fraud-features/: Cargo.toml  fraud-features.wasm
examples/kafka-inline-ai-stack/wasm-fraud-features/src/: lib.rs
examples/predictive-maintenance-onnx/: FeedAndRead.java  Main.java  README.md
examples/predictive-maintenance-onnx/model/: failure-risk.onnx  gen_model.py
examples/predictive-maintenance-onnx/wasm-telemetry-decoder/: Cargo.toml  telemetry-decoder.wasm
examples/predictive-maintenance-onnx/wasm-telemetry-decoder/src/: lib.rs
src/main/java/com/streamflow/pulse/client/: DuplexChannel.java  EventsResource.java  IQResource.java  PulseClient.java  StreamBuilder.java  StreamsResource.java
(+9 files in other folders)
